--- a/medialab_loan_application/composer.json
+++ b/medialab_loan_application/composer.json
@@ -9,6 +9,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
+        "laravel/scout": "^10.1",
         "laravel/tinker": "^2.8"
     },
     "require-dev": {
