--- a/medialab_loan_application/docker-compose.yml
+++ b/medialab_loan_application/docker-compose.yml
@@ -17,13 +17,13 @@ services:
             LARAVEL_SAIL: 1
             XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
             XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
+            IGNITION_LOCAL_SITES_PATH: '${PWD}'
         volumes:
             - '.:/var/www/html'
         networks:
             - sail
         depends_on:
             - mysql
-
     mysql:
         image: 'mysql/mysql-server:8.0'
         ports:
@@ -48,7 +48,6 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
-
 networks:
     sail:
         driver: bridge
